--- a/index.html
+++ b/index.html
@@ -282,20 +282,15 @@
                         <div class="image-container">
                             <img class="img-fluid" src="images/project-1.png" alt="Ministère de l'Industrie">
                         </div> <!-- end of image-container -->
-                        <p><strong>Projet:</strong>CONCEPTION  D'UN PLATFORME DE VENTE DE PRODUITS ARTISANAUX <strong>Motif:</strong> Thème de mon memoire au sein du Ministère de l'Industrie et du Commerce (Direction des Systèmes d'Information) <strong>Période:</strong> Novembre 2024 – Janvier 2025 . <a class="blue" href="project.html">Consulter le site</a> </p>
+                        <p><strong>Projet:</strong>CONCEPTION  D'UN PLATFORME DE VENTE DE PRODUITS ARTISANAUX <strong>Motif:</strong> Thème de mon memoire au sein du Ministère de l'Industrie et du Commerce (Direction des Systèmes d'Information) <strong>Période:</strong> Novembre 2024 – Janvier 2025 . La plateforme est en local.
                     </div> <!-- end of text-container -->
                     <div class="text-container">
                         <div class="image-container">
-                            <img class="img-fluid" src="images/project-2.jpg" alt="Banque Populaire">
+                            <img class="img-fluid" src="images/portfolio.png" alt="Banque Populaire">
                         </div> <!-- end of image-container -->
-                        <p><strong>Poste:</strong> Stagiaire <strong>Entreprise:</strong> Banque Populaire d'Abengourou <strong>Période:</strong> 01/04/2020 – 30/06/2020</p>
+                        <p><strong>Portfolio:</strong> KOUAKOU KOUASSI YVES PARFAIT </p>
                     </div> <!-- end of text-container -->
-                    <div class="text-container">
-                        <div class="image-container">
-                            <img class="img-fluid" src="images/project-3.jpg" alt="MOOV AFRICA">
-                        </div> <!-- end of image-container -->
-                        <p><strong>Poste:</strong> Promoteur <strong>Entreprise:</strong> MOOV AFRICA (Abengourou) <strong>Période:</strong> 2017-2018</p>
-                    </div> <!-- end of text-container -->
+              
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
