Votre message de commit

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         <div class="image-container">
                             <img class="img-fluid" src="images/project-1.png" alt="Ministère de l'Industrie">
                         </div> <!-- end of image-container -->
-                        <p><strong>Projet:</strong>CONCEPTION  D'UN PLATFORME DE VENTE DE PRODUITS ARTISANAUX <strong>Motif:</strong> Thème de mon memoire au sein du Ministère de l'Industrie et du Commerce (Direction des Systèmes d'Information) <strong>Période:</strong> Novembre 2024 – Janvier 2025 . La plateforme est en local.
+                        <p><strong>Projet:</strong>CONCEPTION  D'UNE PLATFORME DE VENTE DE PRODUITS ARTISANAUX <strong>Motif:</strong> Thème de mon memoire au sein du Ministère de l'Industrie et du Commerce (Direction des Systèmes d'Information) <strong>Période:</strong> Novembre 2024 – Janvier 2025 . La plateforme est en local.
                     </div> <!-- end of text-container -->
                     <div class="text-container">
                         <div class="image-container">
