--- a/index.html
+++ b/index.html
@@ -444,6 +444,24 @@
             });
     });
 });
+
+// Menu Mobile Toggle
+document.addEventListener('DOMContentLoaded', function() {
+    const navbarToggler = document.querySelector('.navbar-toggler');
+    const navbarCollapse = document.querySelector('.navbar-collapse');
+    
+    navbarToggler.addEventListener('click', function() {
+        navbarCollapse.classList.toggle('open');
+    });
+    
+    // Fermer le menu quand on clique sur un lien
+    const navLinks = document.querySelectorAll('.nav-link');
+    navLinks.forEach(function(link) {
+        link.addEventListener('click', function() {
+            navbarCollapse.classList.remove('open');
+        });
+    });
+});
    </script>
 </body>
 </html>
